# http_client

./: .gitmodules  CMakeLists.txt  README.md
cmake_configs/: proj_config.cmake  proj_testing.cmake
inc/http_client/: http_client.h  http_codec.h  http_headers.h
samples/: CMakeLists.txt
samples/http_client_sample/: CMakeLists.txt  http_client_sample.c
scripts/: build_coverage.sh  pull_submodules.sh
src/: http_client.c  http_codec.c  http_headers.c
tests/: CMakeLists.txt
tests/http_client_e2e/: CMakeLists.txt  http_client_e2e.c  main.c
tests/http_client_ut/: CMakeLists.txt  http_client_ut.c  main.c
tests/http_codec_ut/: CMakeLists.txt  http_codec_ut.c  main.c
tests/http_headers_ut/: CMakeLists.txt  http_headers_ut.c  main.c
